# forensics-processor

./: .gitignore  README.md  process_large_csv.py  pyproject.toml  run_all_analysis.sh  test_excel_20250809_221313.xlsx
powershell/: Split-ExcelFile.ps1  split-csv-20k.ps1  split-csv-500k.ps1
schemas/: autofill.schema.json
scripts_anonymizers/: anonymize.py  anonymize_md.py
scripts_forensic/: analyze_all_urls.py  bitcoin_finder.py  browser_extension_analyzer.py  crypto_wallet_detector.py  domain_artifact_analyzer.py  google_drive_analyzer.py  run_bitcoin_search.sh  scriptsREADME.md  suspicious_url_analyzer.py  system_timeline_analyzer.py  teamviewer_detector.py  timeline_correlation.py
scripts_github_de-blocker/: sanitize_forensics.py  sanitize_tokens.py
src/data_processor/: __init__.py  analyzer.py  batch_cli.py  batch_processor.py  credential_analyzer.py  credential_cli.py  credential_risk_analyzer.py  credential_risk_cli.py  csv_split_cli.py  csv_splitter.py  excel_utils.py  main.py  password_extractor.py  password_extractor_cli.py  post_processor.py  srcREADME.md  visualizer.py
tests/: parsers.txt
tests/test_default_workflow/: test_excel_create.py  test_excel_open.py
