[tool.poetry]
name = "data-processor"
version = "0.1.0"
description = "Excel and CSV processing tool"
authors = ["catwhisperer <catwhisperer@whisperer.com>"]

packages = [
  { include = "data_processor", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
xlsxwriter = "^3.1.0"
numpy = ">=2.0.0"
networkx = "^3.4.2"
colorama = "^0.4.6"
regex = "^2024.11.6"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pandas-stubs = "^2.3.0.250703"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
batch-process = "data_processor.batch_cli:main"
csv-split = "data_processor.csv_split_cli:main"
password-extract = "data_processor.password_extractor_cli:main"